--- a/HomeDrive/templates/Login.html
+++ b/HomeDrive/templates/Login.html
@@ -12,7 +12,11 @@
     <input type="text" name="username" placeholder="E.X. ABC" size="25"><br/><br/>
     <label>Password: </label>
     <input type="password" name="password" size="25"><br /><br/>
+
+    <a href='{{url_for("register")}}'> Not User?</a><br/><br/>
+
     <input type="submit" value="Submit" formmethod="post"> <br/>
+
 
 
 </form>
